<resources>
    <string name="app_name">LibertyLend</string>
    <string name="libertylend">LibertyLend</string>
    <string name="control_your_budget">Control Your Budget</string>
    <string name="bank_made_by_users_for">Bank Made By Users for</string>
    <string name="people">People</string>
    <string name="people1">People.</string>
    <string name="track_the_money_you_spend_with_friends_and_brands">Track The Money You Spend With Friends and Brands</string>
</resources>