<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <ImageView
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginStart="22sp"
            android:background="@drawable/banklogo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:letterSpacing="0.02"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="4sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:text="@string/libertylend"
            android:textSize="17sp" />


    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:elevation="100sp"
        android:layout_height="400sp"
        android:background="@drawable/bottombg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="460sp"
        android:elevation="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="421dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="-18dp"
            android:background="@drawable/flower2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="360sp"
        android:elevation="200sp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22sp"
            android:layout_marginBottom="2sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:letterSpacing="0.02"
            android:text="@string/control_your_budget"
            android:textColor="#843F92"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42sp"
            android:layout_marginTop="0sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="-2sp"
            android:text="@string/bank_made_by_users_for"
            android:textColor="@color/black"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="230sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42sp"
            android:layout_marginTop="-7sp"
            android:fontFamily="@font/roboto_condensed_regular"
            android:letterSpacing="0.01"
            android:text="@string/people1"
            android:textColor="#843F92"
            android:textSize="44sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42sp"
            android:letterSpacing="0.01"
            android:text="@string/track_the_money_you_spend_with_friends_and_brands"
            android:textColor="#635263"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginStart="42sp"
                android:layout_marginTop="17sp"
                android:background="@drawable/googlebox">

                <Button
                    android:id="@+id/googleBtn"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/googlelogo"
                    android:onClick="googleui" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="180sp"
                android:layout_height="match_parent"
                android:layout_marginStart="88sp"
                android:layout_marginTop="15sp">

                <Button
                    android:id="@+id/getstarted"
                    android:layout_width="180sp"
                    android:layout_height="match_parent"
                    android:background="@drawable/getstartedui"
                    android:elevation="200sp"
                    android:fontFamily="@font/roboto_condensed_regular"
                    android:letterSpacing="0.02"
                    android:paddingStart="14sp"
                    android:text="Get Started"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:textColor="#CCBBCC"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="16sp"
                    android:layout_height="16sp"
                    android:layout_marginStart="-35sp"
                    android:layout_marginTop="20sp"
                    android:background="@drawable/arrow"
                    android:elevation="200sp"
                    android:textAlignment="center" />


            </LinearLayout>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="signin_main"
            android:layout_marginTop="15sp"
            android:text="Already have an account? Sign In"
            android:textAlignment="center"
            android:textColor="#843F92" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>